<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:visibility="visible"
    tools:context="com.map524s1a.killddl.MainViewActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_above="@+id/navigation"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/cardview_light_background"
        android:textAlignment="center"
        app:elevation="24dp"
        app:itemIconTint="#1049cf"
        app:itemTextColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav" />



    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:showText="false"
        android:track="@drawable/button_design_plain"
        android:thumb="@drawable/customswitchselector"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="68dp"
        android:layout_height="78dp"
        android:layout_above="@+id/navigation"
        android:layout_marginStart="-8dp"
        android:layout_marginBottom="-24dp"
        android:layout_toEndOf="@+id/monthlyTag"
        android:background="#ffffff"
        android:backgroundTint="@color/com_facebook_blue"
        android:clickable="true"
        android:tint="@color/cardview_light_background"
        app:elevation="24dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignTop="@+id/switch1"
        android:layout_marginStart="11dp"
        android:gravity="center_vertical"
        android:text="Monthly"
        android:id="@+id/monthlyTag"
        />

    <TextView
        android:id="@+id/dailyTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/switch1"
        android:layout_alignBottom="@+id/switch1"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/floatingActionButton"
        android:gravity="center_vertical"
        android:text="Daily"
        />

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_above="@+id/fragment_container"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginBottom="24dp"-->
    <!--android:orientation="horizontal"-->
    <!--android:background="@drawable/button_design_plain">-->

    <!--<Button-->
    <!--android:id="@+id/button2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="130dp"-->
    <!--android:layout_marginTop="32dp"-->
    <!--android:background="@drawable/button_design_fb"-->
    <!--android:text="Button" />-->

    <!--<Button-->
    <!--android:id="@+id/button3"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="62dp"-->
    <!--android:text="Button"-->
    <!--android:background="@drawable/button_design_plain"/>-->

    <!--</LinearLayout>-->





</RelativeLayout>