<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <Button
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/com_facebook_blue"
        android:text="Add"
        android:soundEffectsEnabled="true"
        android:shadowDy="@integer/google_play_services_version"
        android:elevation="24dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:text="Create new event:"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:text="Topic:"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/topic_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/topic_tag"
        android:layout_below="@+id/topic_tag"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/description_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/topic_val"
        android:layout_below="@+id/topic_val"
        android:layout_marginTop="18dp"
        android:text="Description:"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/des_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/description_tag"
        android:layout_below="@+id/description_tag"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date_tag"
        android:layout_below="@+id/date_tag"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/date_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/des_val"
        android:layout_below="@+id/des_val"
        android:layout_marginTop="14dp"
        android:text="Date:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notification_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date_picker"
        android:layout_below="@+id/date_picker"
        android:layout_marginTop="17dp"
        android:text="Notification:"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/notify_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/notification_tag"
        android:layout_below="@+id/notification_tag"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/color_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/notify_val"
        android:layout_below="@+id/notify_val"
        android:layout_marginTop="25dp"
        android:text="Color:"
        android:textStyle="bold" />

    <Button
        android:id="@+id/color_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/color_tag"
        android:layout_below="@+id/color_tag"
        android:layout_marginTop="21dp"
        android:background="@drawable/button_color_picker" />
</RelativeLayout>