...
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/evetitle"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/statusBtn"
                android:layout_toEndOf="@+id/statusBtn"
                android:gravity="center_vertical"
                android:textStyle="bold" />
...
